# tic-python

./: .gitignore  LICENSE  README.md  pyproject.toml
doc/source/: conf.py  index.rst
docs/source/: index.rst
examples/: multidevice_records_logger.py  records_logger.py  simple.py
src/airel/tic/: __init__.py  device.py  encoding.py  exceptions.py  libusb_interface.py  serial_interface.py
src/airel/tic/util/: records_logger.py
src/tic/: __init__.py  device.py  encoding.py  exceptions.py  libusb_interface.py
