[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airel.tic"
version = "1.1.dev0"
authors = [
    { name = "Airel OÜ", email = "info@airel.ee" },
]
description = "Python package for controlling Airel Tiny Ion Counter devices"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "cobs==1.2.0",
    "pyusb==1.2.1",
]

[optional-dependencies]
serial = ["pyserial==3.5"]
logger = [
    "PyYAML==6.0",
    "pydantic==2.4.2",
    "pytz==2023.3",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/dist",
    "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/airel"]
